# parry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  detector_request.yml  integration_request.yml
.github/workflows/: ci.yml
examples/: 01_prompt_injection.py  02_jailbreak.py  03_secret_leak.py  04_system_prompt_extraction.py  05_tool_call_protection.py  06_wrap_end_to_end.py  README.md
src/parry/: __init__.py  agent_guard.py  config.py  exceptions.py  guard.py  input_guard.py  models.py  output_guard.py  redactor.py
src/parry/detectors/: __init__.py  base.py  jailbreak.py  mcp_boundary.py  pii.py  prompt_injection.py  secret_scan.py  system_prompt_leak.py  tool_call.py
src/parry/integrations/: __init__.py  anthropic.py  fastapi.py  langchain.py  openai.py
tests/: conftest.py  test_agent_guard.py  test_guard.py  test_models.py  test_observability.py
tests/detectors/: test_jailbreak.py  test_prompt_injection.py  test_secret_scan.py
