[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parry-ai"
version = "0.2.0"
description = "Agent-native runtime security guardrail for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pranav Suresh", email = "prnvlol@protonmail.com" },
]
keywords = ["ai", "security", "llm", "agents", "guardrails", "prompt-injection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Zero production dependencies
dependencies = []

[project.optional-dependencies]
full = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
langchain = ["langchain-core>=0.1.0"]
fastapi = ["starlette>=0.27.0"]
ml = ["sentence-transformers>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/Prnvlol/parry"
Documentation = "https://github.com/Prnvlol/parry#readme"
Repository = "https://github.com/Prnvlol/parry"
Issues = "https://github.com/Prnvlol/parry/issues"
Changelog = "https://github.com/Prnvlol/parry/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/parry"]

[tool.hatch.build.targets.wheel.force-include]
"src/parry/py.typed" = "parry/py.typed"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Regex pattern tuples cannot be meaningfully wrapped
"src/parry/detectors/*.py" = ["E501"]
"src/parry/integrations/*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
